data/derived/comb/progs/unify/prog7789.ml.out
Characters 14-15:
  let _ = clone 3 5;;
                ^
Error: This expression has type int but an expression was expected of type
         'a -> string
